# pydantic-super-model

./: .gitignore  AGENTS.md  README.md  codecov.yml  pyproject.toml
.agents/: skills.json
.agents/agents/: code-simplify.md  ultra-review.md  ultra-simplify.md
.agents/hooks/: simplify-on-stop.sh
.agents/rules/: github.md  poetry.md  project.md  pydantic.md  python.md  testing.md
.agents/settings/: claude.json  codex.json
.agents/skills/ci-watch/: SKILL.md
.agents/skills/claude-review/: SKILL.md
.agents/skills/code-review/: SKILL.md
.agents/skills/code-review-loop/: SKILL.md
.agents/skills/code-simplify/: SKILL.md
.agents/skills/coordinate-repositories/: SKILL.md
.agents/skills/link-pr/: SKILL.md
.agents/skills/link-prs/: SKILL.md
.agents/skills/link-repo/: SKILL.md
.agents/skills/list-rules/: SKILL.md
.agents/skills/list-skills/: SKILL.md
.agents/skills/propagate-skill/: SKILL.md
.agents/skills/python-anti-patterns/: SKILL.md
.agents/skills/refactor/: SKILL.md
.agents/skills/simplify-code/: SKILL.md
.agents/skills/ultra-simplify/: SKILL.md
.agents/skills/update-agents/: SKILL.md
.claude/: settings.json
.claude/agents/: code-simplify.md  ultra-review.md
.claude/hooks/: simplify-on-stop.sh
.claude/rules/: poetry 2.md  poetry.md  pydantic.md  python.md  testing.md
.claude/skills/: list-rules
.claude/skills/claude-review/: SKILL.md
.claude/skills/code-review/: SKILL.md
.claude/skills/code-simplify/: SKILL.md
.claude/skills/refactor/: SKILL.md
.claude/skills/ultra-refactor/: SKILL.md
.codex/: config.toml
.codex/skills/: ci-watch  link-prs  link-repo  list-skills  update-agents
.cursor/agents/: code-simplify.md  ultra-review.md  ultra-simplify.md
.cursor/hooks/: simplify-on-start.sh  simplify-on-stop.sh
.cursor/rules/: github.mdc  pydantic.mdc  python.mdc
.cursor/skills/: code-review-loop  coordinate-repositories  link-pr  propagate-skill
.github/scripts/: agent_sync.py  code_review.py  cursor_review.py  requirements-agent-sync.txt
.github/workflows/: agent-sync.yml  claude-review.yml  code-review.yml  publish-to-pypi.yml  run_tests.yml
pydantic_super_model/: __init__.py  _annotation_lookup.py  annotation_lookup.py  annotations.py  base.py  generic_resolution.py  mixin.py  model.py  pydantic_mixin.py
super_model/: model.py
tests/: helpers.py  test_annotations.py  test_generics.py  test_mixin.py  test_model.py  test_public_api.py  test_validation.py
tests/models/: __init__.py  plain_user.py  user.py
(+63 files in other folders)
