[project]
name = "pydantic-super-model"
version = "1.2.0"
description = "Lightweight mixin for generic introspection and Annotated field lookup"
authors = [
    { name = "Julien Kmec", email = "me@julien.dev" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "pydantic>=2.11.7",
    "python-generics>=0.2.3"
]

[project.urls]
Homepage = "https://github.com/julien777z/pydantic-super-model"
Repository = "https://github.com/julien777z/pydantic-super-model"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "coverage>=7.6",
    "pytest-cov>=6.1.1",
    "black",
    "isort",
    "pylint",
]

[tool.poetry]
packages = [
    { include = "pydantic_super_model" }
]
include = ["pydantic_super_model/py.typed"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 110
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 110

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "missing-module-docstring",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
