[project]
name = "pydantic-super-model"
version = "2.0.0"
description = "Lightweight mixin for generic introspection and Annotated field lookup"
authors = [
    { name = "Julien Kmec", email = "me@julien.dev" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "pydantic>=2.13.4",
    "python-generics>=0.2.4"
]

[project.urls]
Homepage = "https://github.com/julien777z/pydantic-super-model"
Repository = "https://github.com/julien777z/pydantic-super-model"

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "coverage>=7.15.0",
    "pytest-cov>=7.1.0",
    "black>=26.5.1",
    "isort>=8.0.1",
    "pylint>=4.0.6",
]

[tool.poetry]
packages = [
    { include = "pydantic_super_model" }
]
include = ["pydantic_super_model/py.typed"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 110
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 110

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "missing-module-docstring",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
